src/test/ui/rfc-2093-infer-outlives/nested-structs.stderr
error: rustc_outlives
  --> $DIR/nested-structs.rs:5:1
   |
LL | / struct Foo<'a, T> { //~ ERROR 15:1: 17:2: rustc_outlives
LL | |     field1: Bar<'a, T>
LL | | }
   | |_^
   |
   = note: T : 'a

error: aborting due to previous error

